# spirit_extras

./: .gitignore  LICENSE  README.md  format.sh  plotting.py  setup.cfg  test_pyvista.py
.github/workflows/: pypi.yml  test.yml
examples/: pyvista_hopfion.py
spirit_extras/: configurations.py  plotting.py  pyvista_plotting.py
spirit_utils/: Spin_System.py  chain_io.py  data.py  gneb_workflow.py  import_spirit.py  memory_monitor.py  plotting.py  post_processing.py  spirit_path.py  util.py
src/spirit_extras/: calculation_folder.py  chain_io.py  configurations.py  data.py  dependency_gatherer.py  gneb_workflow.py  import_spirit.py  memory_monitor.py  plotting.py  post_processing.py  pyvista_plotting.py  rate.py  util.py
test/: input.cfg
tests/: test_calculation_folder.py  test_chain_io.py  test_data.py  test_dependency_gatherer.py  test_gneb_workflow.py  test_plotting.py  test_pyvista_plotting.py  util.py
tests/inputs/: test_chain_io.cfg  test_data.cfg  test_gneb_workflow.cfg  test_pyvista_plot.cfg
