[metadata]
name = spirit-extras
version = 0.0.11
author = Moritz Sallermann
author_email = m.sallermann@fz-juelich.de
description = Package to be used with the magnetism simulation tool spirit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/msallermann/spirit_extras
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pyvista
    anytree
[options.packages.find]
where = src